2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* Gendarme.Rules.Naming.xml.in: Fixed error from copy and paste for the
	performance xml file.  The correct namespace is Gendarme.Rules.Naming.

2007-09-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* UsePluralNameInFlagEnumsRule.cs,
	UsePluralNameInEnumFlagsRule.cs:  Rename 
	UsePluralNameInFlagEnumsRule.cs to UsePluralNameInEnumFlagsRule.cs
	because this file doesn't follow the coding guidelines.
	* Makefile.am: Change files to build the renamed rule.

2007-09-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AttributeEndsWithAttributeSuffixRule.cs:  Change cast to as operator
	for avoid two type tests in method body.

2007-09-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AttributeEndsWithAttributeSuffixRule.cs:  Fixed a
	NullReferenceException when the current type is System.Object.  Change
	cast to as operator for avoid two type tests.

2007-09-13  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: New.  Build Gendarme.Rules.Naming rules and tests.
	* Gendarme.Rules.Naming.xml.in: New.  Configuration for
	Gendarme.Rules.Naming.
	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs,
	UsePluralNameInFlagEnumsRule.cs,
	UseSingularNameInEnumsUnlessAreFlagsRule.cs,
	AttributeEndsWithAttributeSuffixRule.cs:  New. Rules for check the
	naming conventions.
